# lpm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dev/: README.md
dev/samplelpmdir/: config.toml  lpm.toml
dev/samplelpmdir/cache/repositories/: repositoryid.toml
dev/samplelpmdir/repositories/: repositoryid.toml
dev/samplepackage/: hamming.lua  hamming_demo.lua  module.toml
dev/sampleproject/: README.md  main.lua  packages.toml
dev/sampleproject/lua_modules/hamming/: hamming.lua  hamming_demo.lua
dev/samplerepository/: repository.toml
docs/: lpm_project_structure.drawio
src/: argparser.h  args.h  command.cpp  command.h  env.h  errorhandling.h  main.cpp
src/handlers/: configure.cpp  configure.h  handlers.h  install.cpp  install.h
src/static/: MESSAGES_HELP  defaults.h  messages.h
src/static/assets/: LPM_SQL_INIT_MIGRATION  LPM_TOML_DEFAULT  MESSAGES_HELP
